Slight spacing fix

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -3,6 +3,7 @@ body {
     max-width: 960px;
     color: #696969;
     font-family: 'Lato', sans-serif;
+    padding-bottom: 40px;
 }
 
 .featuredImages {
